Alterando as imagens dos artigos

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <h2>Entretedimento</h2>
         <div class="articles">
             <article>
-            <img src="./imagens/dolares.jpg" alt="Música" />
+            <img src="./imagens/iron maiden.jpg" alt="Música" />
             <header>
                 <time>17/02/2024 às 12:35</time>
             </header>
@@ -132,7 +132,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
         <article>
-            <img src="./imagens/euro.jpg" alt="Famosos" />
+            <img src="./imagens/Filme.jpg" alt="Famosos" />
             <header>
                 <time>17/02/2024 às 12:35</time>
             </header>
@@ -143,7 +143,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
         <article>
-            <img src="./imagens/petroleo.jpg" alt="Dieta" />
+            <img src="./imagens/dieta.jpg" alt="Dieta" />
             <header>
                 <time>17/02/2024 às 12:35</time>
             </header>
@@ -162,7 +162,7 @@
         <h2>Tecnologia</h2>
         <div class="articles">
             <article>
-            <img src="./imagens/dolares.jpg" alt="Inteligênica Artificial" />
+            <img src="./imagens/inteligencia artificial.jpeg" alt="Inteligênica Artificial" />
             <header>
                 <time>17/02/2024 às 12:35</time>
             </header>
@@ -173,7 +173,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
         <article>
-            <img src="./imagens/euro.jpg" alt="Computadores" />
+            <img src="./imagens/computador.jpg" alt="Computadores" />
             <header>
                 <time>17/02/2024 às 12:35</time>
             </header>
@@ -184,7 +184,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
         <article>
-            <img src="./imagens/petroleo.jpg" alt="Crise dos semicondutores" />
+            <img src="./imagens/semicondutores.jpeg" alt="Crise dos semicondutores" />
             <header>
                 <time>17/02/2024 às 12:35</time>
             </header>
