--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                 <li>
                     <a href="#economy" title="Ir para a seção de notícias">Economia</a>
                 </li>
+                <li>
+                    <a href="#entertainment" title="Ir para a seção de notícias">Economia</a>
+                </li>
+                <li>
+                        <a href="#technology" title="Ir para a seção de notícias">Economia</a>
+                </li>
             </ul>
         </nav>
     </div>
