Corrigindo errros os nomes do links

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     <a href="#economy" title="Ir para a seção de notícias">Economia</a>
                 </li>
                 <li>
-                    <a href="#entertainment" title="Ir para a seção de notícias">Economia</a>
+                    <a href="#entertainment" title="Ir para a seção de notícias">Entretedimento</a>
                 </li>
                 <li>
-                        <a href="#technology" title="Ir para a seção de notícias">Economia</a>
+                        <a href="#technology" title="Ir para a seção de notícias">Tecnologia</a>
                 </li>
             </ul>
         </nav>
