--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <header>
                 <time>17/02/2024 às 12:35</time>
             </header>
-            <h3>Iron Maiden anúncia show no Brasil</h3>
+            <h3>Iron Maiden anuncia show no Brasil</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
             </p>
